--- a/index.ipynb
+++ b/index.ipynb
@@ -70,13 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Janurary'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "travel_month = 'Jan'# \"January\""
+    "travel_month = 'Janurary'# \"January\"\n",
+    "travel_month"
    ]
   },
   {
